--- a/FastHireFire/pom.xml
+++ b/FastHireFire/pom.xml
@@ -88,7 +88,13 @@
 		<dependency>
 		    <groupId>org.json</groupId>
 		    <artifactId>json</artifactId>
-		    </dependency>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		</dependency>
+		
 	
 	</dependencies>
 		 
