--- a/FastHireFire/pom.xml
+++ b/FastHireFire/pom.xml
@@ -75,7 +75,7 @@
 		<dependency>
 		    <groupId>com.sap.cloud</groupId>
 		    <artifactId>neo-java-web-api</artifactId>
-		    <version>1.43.20</version>
+		    <version>2.46.8</version>
 		    <scope>provided</scope>
 		</dependency>		
 		
@@ -94,6 +94,11 @@
 		    <groupId>com.google.code.gson</groupId>
 		    <artifactId>gson</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+<dependency>
+    <groupId>org.apache.httpcomponents</groupId>
+    <artifactId>httpclient</artifactId>
+</dependency>
 		
 	
 	</dependencies>
