--- a/FastHireFire/src/main/webapp/WEB-INF/web.xml
+++ b/FastHireFire/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,14 @@
 	   <res-ref-name>EcmService</res-ref-name>
 	   <res-type>com.sap.ecm.api.EcmService</res-type>
 	</resource-ref>
+	<resource-ref>
+    	<res-ref-name>connectivityConfiguration</res-ref-name>
+   		 <res-type>com.sap.core.connectivity.api.configuration.ConnectivityConfiguration</res-type>
+	</resource-ref>
+	<resource-ref>
+    <res-ref-name>myAuthHeaderProvider</res-ref-name>
+    <res-type>com.sap.core.connectivity.api.authentication.AuthenticationHeaderProvider</res-type>
+</resource-ref>
 	  <security-constraint>
 	    <web-resource-collection>
 	      <web-resource-name>All Services</web-resource-name>
